[gd_scene load_steps=4 format=3 uid="uid://b0mds32lmdvo3"]

[ext_resource type="Texture2D" uid="uid://dd7wvfiqr5ps8" path="res://Assets/Sprites/PresentationScreens/screen#1(pie-charts).png" id="1_qkg3i"]
[ext_resource type="Script" path="res://scripts/presentation_slides.gd" id="1_vlw7v"]
[ext_resource type="Texture2D" uid="uid://bncnqj86dkrar" path="res://Assets/Sprites/PresentationScreens/screen#2(money).png" id="3_5hcat"]

[node name="spr_presentation" type="Sprite2D"]
texture = ExtResource("1_qkg3i")
script = ExtResource("1_vlw7v")
slides = Array[Texture]([ExtResource("1_qkg3i"), ExtResource("3_5hcat")])

[node name="tmr_slides" type="Timer" parent="."]
one_shot = true

[node name="tmr_input" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="tmr_slides" to="." method="_on_tmr_slides_timeout"]
[connection signal="timeout" from="tmr_input" to="." method="_on_tmr_input_timeout"]
